--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="nav_header_subtitle">developer@adminneg.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_spash">Admin Neg</string>
+    <string name="dummy_button">Ingresar</string>
+    <string name="dummy_content">AdminNeg</string>
 </resources>
