--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,27 @@
     <string name="title_activity_spash">Admin Neg</string>
     <string name="dummy_button">Ingresar</string>
     <string name="dummy_content">AdminNeg</string>
+
+    <string name="sign_up">Registro</string>
+    <string name="sign_in">Login</string>
+
+    <string name="name">Nombre</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Password</string>
+    <string name="have_an_account">¿Ya tienes una cuenta?</string>
+    <string name="have_not_an_account">¿No tienes una cuenta? Registrate</string>
+
+    <string name="name_error">error_nombre</string>
+    <string name="name_error_no_update">error_mismo_nombre</string>
+    <string name="email_error">error_email</string>
+    <string name="email_doesnt_match">error_formato_email</string>
+    <string name="email_error_no_update">error_mismo_email</string>
+    <string name="password_error">error_password</string>
+    <string name="password_error_less_than">Password debe ser mayor de 4 caracteres</string>
+
+    <string name="update_profile">Actualizar Profile</string>
+    <string name="logout">Log Out</string>
+    <string name="delete">Borrar Profesor</string>
+    <string name="profile">Profile</string>
+
 </resources>
