--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AdminNeg</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Abrir guia de navegação</string>
+    <string name="navigation_drawer_close">Fechar a guia de navegação</string>
     <string name="nav_header_title">Admin Neg</string>
     <string name="nav_header_subtitle">developer@adminneg.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="nav_header_desc">Cabeçalho de navegação</string>
+    <string name="action_settings">Configuração</string>
 
     <string name="title_activity_spash">Admin Neg</string>
-    <string name="dummy_button">Sign in</string>
+    <string name="dummy_button">Enter</string>
     <string name="dummy_content">AdminNeg</string>
 
-    <string name="sign_up">Sign up</string>
-    <string name="sign_in">Login</string>
+    <string name="sign_up">Registro</string>
+    <string name="sign_in">Enter</string>
 
-    <string name="name">Name</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="have_an_account">¿Do you already have an account?</string>
-    <string name="have_not_an_account">You do not have an account? Sign up</string>
+    <string name="name">Nome</string>
+    <string name="email">Correio eletrônico</string>
+    <string name="password">Senha</string>
+    <string name="have_an_account">Você já tem uma conta?</string>
+    <string name="have_not_an_account">Não tem uma conta? Cadastre-se</string>
 
-    <string name="name_error">error in the name</string>
-    <string name="name_error_no_update">error in the name</string>
-    <string name="email_error">error in the email</string>
-    <string name="email_doesnt_match">error in the mail format</string>
-    <string name="email_error_no_update">The mail is already being used, it is not possible to create a user.</string>
-    <string name="password_error">Error in password</string>
-    <string name="password_error_less_than">Password must be greater than 4 characters</string>
+    <string name="name_error">Erro de nome</string>
+    <string name="name_error_no_update">Erro de atualização de nome</string>
+    <string name="email_error">Erro no formato de email </string>
+    <string name="email_doesnt_match">Senha não é a mesma</string>
+    <string name="email_error_no_update">O Mail já está sendo usado, não é possível criar um usuário.</string>
+    <string name="password_error">Erro de senha</string>
+    <string name="password_error_less_than">A senha deve ter mais de 4 caracteres</string>
 
-    <string name="update_profile">Update Profile</string>
-    <string name="logout">Exit</string>
-    <string name="delete">Delete User</string>
-    <string name="profile">Profile</string>
+    <string name="update_profile">Atualizar perfil</string>
+    <string name="logout">Saída</string>
+    <string name="delete">Excluir usuário</string>
+    <string name="profile">Perfil</string>
     <string name="salir">Salir</string>
     <string name="cerrar_sesion">Cerrar sesion</string>
     <string name="errLogueo">Error de la cuenta o contraseña incorrecta</string>
     <string name="email_error_no_definido">Error no definido</string>
     <string name="registro_login_exitoso">Para completar el registro se envio un link de confirmacion a su correo.</string>
-    <string name="email_error_no_confirm">Error,Se envio un link a su correo para activar la cuenta.</string>
+    <string name="email_error_no_confirm">Se envio un link a su correo para activar la cuenta.</string>
     <string name="producto_servicio">Productos y Servicios</string>
     <string name="negocios_sucursales">Negocios y Sucursales</string>
     <string name="ventas">Ventas</string>
@@ -56,5 +56,4 @@
     <string name="tutorial">Tuturial</string>
     <string name="terminos_condiciones">Terminos y Condiciones</string>
     <string name="copia_seguridad">Copia de Seguridad</string>
-
 </resources>
